# dkk_simulation

./: .gitignore  AGENTS.md  INVENTORY.md  humanoid_wheeled_robot_palletizing_guide.md  pyproject.toml  render_supre_scene_preview.py  render_supre_scene_thumbnails.py
assets/scenes/: factory_with_rj2506_fixed_stable.usda
configs/: rj2506_tire_loading.yaml
docs/: 2026-04-07_render_pipeline_fix.md  2026-04-14_rj2506_usd_physics_debug_notes.md  rj2506_new_code_config_video_validation.md  rj2506_tire_loading_sim_plan.md  rj2506_video_generation.md  rj2506_wheel_motion_fix.md
scripts/: assemble_rj2506_tire_loading_scene.py  check_conveyor_tire_contact.py  check_rj2506_scene.py  check_usd_colliders.py  encode_rj2506_video.py  export_wheel_tree.py  probe_rj2506_articulation.py  probe_rj2506_replicator_autoframe_scene.py  probe_viewport_capture.py  record_rj2506_control_video.py  record_rj2506_control_video_replicator.py  record_rj2506_control_video_replicator_autoframed.py  run_rj2506_replicator_autoframed.sh  run_rj2506_tire_loading.py  run_rj2506_tire_loading_in_simulation_app.py  run_rj2506_tire_loading_isaac.py
src/dkk_simulation/: __init__.py  assets.py  config.py  env.py  isaac_bridge.py  robot_interface.py  scene_builder.py  task_flow.py
tests/: test_assets.py  test_config.py  test_env.py  test_isaac_bridge.py  test_scene_builder.py  test_task_flow.py  test_usd_collider_checker.py
ur10/: BASELINE.md  README.md  run_ur10_bin_stacking.py  run_ur10_bin_stacking_in_container.sh
