[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dkk-simulation"
version = "0.1.0"
description = "RJ2506 tire loading simulation scaffolding"
readme = "docs/rj2506_tire_loading_sim_plan.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

